--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.12",
     "paydunya": "^1.0.12",
     "prop-types": "^15.8.1",
     "react": "^19.2.0",
