--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
-  "name": "kolwaz",
-  "private": true,
-  "version": "0.0.0",
+  "name": "kolwaz-backend",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint .",
     "start": "node serveur.js"
   },
   "dependencies": {
@@ -23,32 +18,13 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "node-cron": "^4.2.1",
-    "nodemailer": "^7.0.12",
     "paydunya": "^1.0.12",
     "prop-types": "^15.8.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.10.1",
-    "recharts": "^3.6.0",
-    "twilio": "^5.10.7"
+    "twilio": "^5.10.7",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^6.9.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@tailwindcss/postcss": "^4.1.18",
-    "@tailwindcss/postcss7-compat": "^2.2.17",
-    "@types/react": "^19.2.5",
-    "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react": "^5.1.1",
-    "autoprefixer": "^10.4.22",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-    "nodemon": "^3.1.11",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.18",
-    "vite": "^7.2.4"
+    "nodemon": "^3.1.11"
   }
 }
