--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "kolwaz-backend",
+  "name": "kolwaz",
   "version": "1.0.0",
   "type": "module",
+  "private": true,
   "scripts": {
+    "dev": "concurrently \"npm:dev-backend\" \"npm:dev-frontend\"",
+    "dev-backend": "nodemon serveur.js",
+    "dev-frontend": "vite",
+    "build": "vite build",
     "start": "node serveur.js"
   },
   "dependencies": {
@@ -22,9 +27,15 @@
     "prop-types": "^15.8.1",
     "twilio": "^5.10.7",
     "node-cron": "^4.2.1",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "vite": "^7.3.1",
+    "@vitejs/plugin-react": "^3.1.0",
+    "concurrently": "^8.2.1"
   }
 }
