--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,20 +2,27 @@
   "name": "kolwaz-frontend",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "axios": "^1.13.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.14.1",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^9.8.8",
+    "postcss": "^7.0.39",
+    "tailwindcss": "^3.3.3",
+    "vite": "^5.0.0"
   }
 }
