--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+ "scripts": {
+  "dev": "vite --host 0.0.0.0 --port $PORT",
+  "build": "vite build",
+  "preview": "vite preview --host 0.0.0.0 --port $PORT"
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
