--- a/backend/package.json
+++ b/backend/package.json
@@ -20,9 +20,10 @@
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.9.4",
     "node-cron": "^4.2.1",
+    "nodemailer": "^6.9.4",
     "paydunya": "^1.0.12",
+    "sib-api-v3-sdk": "^8.5.0",
     "twilio": "^5.10.7"
   },
   "devDependencies": {
