--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.14.1",
-    "recharts": "^3.6.0"
+    "recharts": "^3.6.0",
+    "swiper": "^12.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
